--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>贪吃蛇游戏</title>
+	<title>贪吃蛇游戏（初始版本）</title>
 </head>
 <style>
 	*{margin:0;padding: 0;}
