Signed-off-by: FengLin2016 <786549791@qq.com>

--- a/gobang.html
+++ b/gobang.html
@@ -123,6 +123,7 @@ new goBang().init();
 /*总结：
 	1、我之前写过一次这个游戏，现在写又忘了，当时的胜负判断的方式，这是这个游戏的重点
 	2、判断胜负用的是每次下一步棋都去遍历了整个棋盘，将横、竖、正斜、反斜等四个方向的className进行记录（存在一个二维数组中），然后直接去判断这个数组的四个方向上里面连续的wwwww和bbbbb就可以了。
-	3、上边的思路是有了，但是我觉得这样是不是太不简洁，因为每次下棋都要去遍历整个数组，我想的是根据当前下棋的位置来判断当前位置的横、竖、正斜、反斜等四个方向，来进行判断胜负。（待实验）？？
+	3、上边的思路是有了，但是我觉得这样是不是太不简洁，因为每次下棋都要去遍历整个数组，我想的是根据当前下棋的位置来判断当前位置的横、竖、正斜、反斜等四个方向（横向向右如果和当前不一样就向左，一共计数五个就代表胜利！其他三个方向类似），来进行判断胜负。（待实验）？？
+	4、后面等有时间再做看哈能不能实现机器自动下棋？
 */
 </script>
